--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -3,9 +3,13 @@
     <description><![CDATA[
         <p>Connects Firebug CSS editor with any IDE with CSS capabilities (IntelliJ IDEA Ultimate, PhpStorm, WebStorm, PyCharm, RubyMine).</p>
     ]]></description>
-    <version>1.0</version>
+    <version>1.1</version>
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen@esn.me">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
+        <ul>1.1
+            <li>Declaration nodes (leafs) are navigatable.</li>
+            <li>Right-click a node also selects it.</li>
+        </ul>
         <ul>1.0
             <li>Initial version</li>
         </ul>
