--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -7,6 +7,7 @@
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen@esn.me">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
         <ul>1.1
+            <li>Offer help page dialog on first run or after upgrade.</li>
             <li>Declaration nodes (leafs) are navigatable.</li>
             <li>Right-click a node also selects it.</li>
         </ul>
