--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -7,9 +7,10 @@
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen@esn.me">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
         <ul>1.1
+            <li>Track modifications in source code and invalidate elements in tree view.</li>
             <li>Offer help page dialog on first run or after upgrade.</li>
-            <li>Declaration nodes (leafs) are navigatable.</li>
-            <li>Right-click a node also selects it.</li>
+            <li>Declaration nodes (leafs) are navigatable with double-click or enter key.</li>
+            <li>Right-click a node selects it and brings up popup menu.</li>
         </ul>
         <ul>1.0
             <li>Initial version</li>
