--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -7,7 +7,7 @@
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen@esn.me">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
         <ul>1.2
-            <li></li>
+            <li>Fixed broken images on help page when not using Firefox.</li>
         </ul>
         <ul>1.1
             <li>Track modifications in source code and invalidate elements in tree view.</li>
