--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -7,6 +7,7 @@
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen@esn.me">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
         <ul>1.2
+            <li>Support for removing properties in Firebug.</li>
             <li>Fixed broken images on help page when not using Firefox.</li>
         </ul>
         <ul>1.1
