--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -9,6 +9,7 @@
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen@esn.me">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
         <ul>1.9
+            <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=6">Issue 6</a> Support for CSS media queries.</li>
         </ul>
         <ul>1.8
             <li>Added navigation buttons (prev, next) in toolbar with automatic jump-to-code.</li>
