--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -9,6 +9,7 @@
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen@esn.me">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
         <ul>1.10
+            <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=8">Issue 8</a> Support for addition of selectors.</li>
             <li>Enqueue incoming changes when in 'dumb' mode (when indices are updated in background).</li>
         </ul>
         <ul>1.9
