--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -5,9 +5,12 @@
         <p>Please read the installation guidelines here: <a href="http://code.google.com/p/css-x-fire/wiki/Installation">http://code.google.com/p/css-x-fire/wiki/Installation</a></p>
         <p>Style with pleasure!</p>
     ]]></description>
-    <version>1.10</version>
+    <version>1.11</version>
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen@esn.me">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
+        <ul>1.11
+            <li>Fixed linking against latest EAPs.</li>
+        </ul>
         <ul>1.10
             <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=8">Issue 8</a> Support for addition of selectors.</li>
             <li>Enqueue incoming changes when in 'dumb' mode (when indices are updated in background).</li>
