--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -5,9 +5,12 @@
         <p>Please read the installation guidelines here: <a href="http://code.google.com/p/css-x-fire/wiki/Installation">http://code.google.com/p/css-x-fire/wiki/Installation</a></p>
         <p>Style with pleasure!</p>
     ]]></description>
-    <version>1.14</version>
+    <version>1.15</version>
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen@esn.me">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
+        <ul>1.15
+            <li>New settings form</li>
+        </ul>
         <ul>1.14
             <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=13">Issue 13</a> Made server IP configurable for remote setup (in about:config, filter on cssxfire for options).</li>
         </ul>
