--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -9,7 +9,8 @@
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen@esn.me">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
         <ul>1.15
-            <li>New settings form</li>
+            <li>New settings form.</li>
+            <li>Configurable route mappings.</li>
         </ul>
         <ul>1.14
             <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=13">Issue 13</a> Made server IP configurable for remote setup (in about:config, filter on cssxfire for options).</li>
