--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -5,9 +5,12 @@
         <p>Please read the installation guidelines here: <a href="http://code.google.com/p/css-x-fire/wiki/Installation">http://code.google.com/p/css-x-fire/wiki/Installation</a></p>
         <p>Style with pleasure!</p>
     ]]></description>
-    <version>1.15</version>
+    <version>1.16</version>
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen@esn.me">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
+        <ul>1.16
+            <li>Added debug logging</li>
+        </ul>
         <ul>1.15
             <li>New settings form.</li>
             <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=11">Issue 11</a> Configurable route mappings.</li>
