--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -9,6 +9,8 @@
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen@esn.me">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
         <ul>1.17
+            <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=18">Issue 18</a> Quick navigation from all nodes with double click or middle mouse click.</li>
+            <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=19">Issue 19</a> Toggle option for automatic expand of changes tree.</li>
         </ul>
         <ul>1.16
             <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=17">Issue 17</a> Spam protection when using arrow keys in Firebug.</li>
