--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -10,6 +10,7 @@
     <change-notes><![CDATA[
         <ul>1.18
             <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=21">Issue 21</a> Reduce filter for currently opened files.</li>
+            <li>Support for Firefox 5.</li>
         </ul>
         <ul>1.17
             <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=18">Issue 18</a> Quick navigation from all nodes with double click or middle mouse click.</li>
