--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -9,6 +9,8 @@
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen@esn.me">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
         <ul>1.19
+            <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=22">Issue 22</a> Fixed hotkey error.</li>
+            <li>Support custom key binds for all actions.</li>
         </ul>
         <ul>1.18
             <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=21">Issue 21</a> Reduce filter for currently opened files.</li>
