--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -6,9 +6,10 @@
         <p>Style with pleasure!</p>
     ]]></description>
     <version>1.21</version>
-    <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen@esn.me">Ronnie Kolehmainen</vendor>
+    <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen at gmail.com">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
         <ul>1.21
+            <li>Fixed compability issues with latest EAP's.</li>
         </ul>
         <ul>1.20
             <li>Enabled (automatic) xpi updates from Firefox.</li>
