--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -109,6 +109,9 @@
         <component>
             <implementation-class>com.googlecode.cssxfire.ProjectSettings</implementation-class>
         </component>
+        <component>
+            <implementation-class>com.googlecode.cssxfire.SearchProcessorCache</implementation-class>
+        </component>
     </project-components>
 
     <actions>
