--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -5,9 +5,12 @@
         <p>Please read the installation guidelines here: <a href="http://code.google.com/p/css-x-fire/wiki/Installation">http://code.google.com/p/css-x-fire/wiki/Installation</a></p>
         <p>Style with pleasure!</p>
     ]]></description>
-    <version>1.21</version>
+    <version>1.22</version>
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen at gmail.com">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
+        <ul>1.22
+            <li>Internal caching of selector and media query searches.</li>
+        </ul>
         <ul>1.21
             <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=23">Issue 23</a> Fixed compability issues with latest EAP's.</li>
         </ul>
