--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -8,6 +8,10 @@
     <version>1.23</version>
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen at gmail.com">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
+        <ul>1.23
+            <li>Support for Firefox 8.</li>
+            <li>Support for nested rules (Less and Sass).</li>
+        </ul>
         <ul>1.22
             <li>Internal caching of selector and media query searches.</li>
         </ul>
