--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -11,6 +11,7 @@
         <ul>1.24
             <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=27">Issue 27</a> Support for the !important construct.</li>
             <li>Support for Firefox 9.</li>
+            <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=29">Issue 29</a> Fix for false positives in nested rules.</li>
         </ul>
         <ul>1.23
             <li>Support for Firefox 8.</li>
