--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -5,9 +5,12 @@
         <p>Please read the installation guidelines here: <a href="http://code.google.com/p/css-x-fire/wiki/Installation">http://code.google.com/p/css-x-fire/wiki/Installation</a></p>
         <p>Style with pleasure!</p>
     ]]></description>
-    <version>1.24</version>
+    <version>1.25</version>
     <vendor url="http://code.google.com/p/css-x-fire/" email="ronnie.kolehmainen at gmail.com">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
+        <ul>1.25
+            <li>Bumped Firefox version to 12.</li>
+        </ul>
         <ul>1.24
             <li><a href="http://code.google.com/p/css-x-fire/issues/detail?id=27">Issue 27</a> Support for the !important construct.</li>
             <li>Support for Firefox 9.</li>
