Fixed most resolving of mixins and variables for issue #1 (still some problems with Scss imports).

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -269,5 +269,6 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <projectConfigurable id="com.github.cssxfire.ProjectSettingsConfigurable" implementation="com.github.cssxfire.ProjectSettingsConfigurable"/>
+        <gotoDeclarationHandler id="com.github.cssxfire.resolve.GotoDeclarationProvider" implementation="com.github.cssxfire.resolve.GotoDeclarationResolver"/>
     </extensions>
 </idea-plugin>
