--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -9,6 +9,7 @@
     <vendor url="https://github.com/ronniekk/css-x-fire" email="ronnie.kolehmainen at gmail.com">Ronnie Kolehmainen</vendor>
     <change-notes><![CDATA[
         <ul>1.29
+            <li>Support for Firebug 1.10.</li>
             <li>Bumped Firefox version to 20.</li>
         </ul>
         <ul>1.28
