Change note for latest build. Closes #17

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -10,6 +10,7 @@
     <change-notes><![CDATA[
         <ul>1.31
             <li>
+                <a href="https://github.com/ronniekk/css-x-fire/issues/12">Issue 17</a> Compiled for IDE build 121.
             </li>
         </ul>
         <ul>1.30
