Changelog for keyboard shortcuts

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -12,6 +12,9 @@
             <li>
                 <a href="https://github.com/ronniekk/css-x-fire/issues/20">Issue 20</a> Compiled for IDE build 124.373.
             </li>
+            <li>
+                <a href="https://github.com/ronniekk/css-x-fire/issues/19">Issue 19</a> Added keyboard shortcuts.
+            </li>
         </ul>
         <ul>1.31
             <li>
